--- a/src/Purchases/Brewup.Purchases.Rest/Brewup.Purchases.Rest.csproj
+++ b/src/Purchases/Brewup.Purchases.Rest/Brewup.Purchases.Rest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -12,6 +12,14 @@
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Brewup.Purchases.ApplicationService\Brewup.Purchases.ApplicationService.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Brewup.Purchases.Rest.Tests" />
   </ItemGroup>
 
 </Project>
