Added EventStore and RabbitMQ

--- a/src/Purchases/Brewup.Purchases.Infrastructure/Brewup.Purchases.Infrastructure.csproj
+++ b/src/Purchases/Brewup.Purchases.Infrastructure/Brewup.Purchases.Infrastructure.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Brewup.Purchases.ApplicationService\Brewup.Purchases.ApplicationService.csproj" />
     <ProjectReference Include="..\Brewup.Purchases.SharedKernel\Brewup.Purchases.SharedKernel.csproj" />
   </ItemGroup>
 
