--- a/src/Purchases/Brewup.Purchases.Rest/appsettings.json
+++ b/src/Purchases/Brewup.Purchases.Rest/appsettings.json
@@ -7,7 +7,21 @@
   },
   "AllowedHosts": "*",
 
+  "EventStore": {
+    "ConnectionString": "ConnectTo=tcp://localhost:1113;UseSslConnection=false"
+  },
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost"
+    "ConnectionString": "mongodb://localhost",
+    "DatabaseName": "Purchases_ReadModel"
+  },
+  "RabbitMQ": {
+    "Host": "localhost",
+    "ExchangeCommandName": "brewup.command.exchange",
+    "QueueCommandName": "brewup.queue.purchases",
+    "ExchangeEventName": "brewup.event.exchange",
+    "QueueEventName": "brewup.topic.purchases",
+    "Username": "guest",
+    "Password": "guest",
+    "ClientId": "BrewupPurchases"
   }
 }
