--- a/src/Purchases/Brewup.Purchases.Rest/appsettings.json
+++ b/src/Purchases/Brewup.Purchases.Rest/appsettings.json
@@ -17,7 +17,7 @@
   "RabbitMQ": {
     "Host": "localhost",
     "ExchangeCommandName": "brewup.command.exchange",
-    "QueueCommandName": "brewup.queue.purchases",
+    "QueueCommandName": "CreateBuyOrder",
     "ExchangeEventName": "brewup.event.exchange",
     "QueueEventName": "brewup.topic.purchases",
     "Username": "guest",
