Completed test with consumer for Command and DomainEvent

--- a/src/Purchases/Brewup.Purchases.ApplicationService/Brewup.Purchases.ApplicationService.csproj
+++ b/src/Purchases/Brewup.Purchases.ApplicationService/Brewup.Purchases.ApplicationService.csproj
@@ -16,6 +16,7 @@
     <Folder Include="Endpoints\" />
     <Folder Include="Abstracts\" />
     <Folder Include="Concretes\" />
+    <Folder Include="EventHandlers\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
