--- a/src/Warehouses/BrewUp.Wharehouses.Rest/BrewUp.Wharehouses.Rest.csproj
+++ b/src/Warehouses/BrewUp.Wharehouses.Rest/BrewUp.Wharehouses.Rest.csproj
@@ -12,7 +12,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-		<PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
@@ -23,6 +23,10 @@
 	<ItemGroup>
 	  <Folder Include="Models\" />
 	  <Folder Include="Validators\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\BrewUp.Warehouse.ApplicationServices\BrewUp.Warehouse.ApplicationServices.csproj" />
 	</ItemGroup>
 
 </Project>
