--- a/src/Warehouses/BrewUp.Warehouse.ApplicationServices/BrewUp.Warehouse.ApplicationServices.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ApplicationServices/BrewUp.Warehouse.ApplicationServices.csproj
@@ -7,11 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Concretes\" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+      <Folder Include="Concretes\" />
     </ItemGroup>
 
 </Project>
