MongoDB ReadModel arrangement (to be completed)

--- a/src/Warehouses/BrewUp.Wharehouses.Rest/BrewUp.Wharehouses.Rest.csproj
+++ b/src/Warehouses/BrewUp.Wharehouses.Rest/BrewUp.Wharehouses.Rest.csproj
@@ -27,6 +27,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\BrewUp.Warehouse.ApplicationServices\BrewUp.Warehouse.ApplicationServices.csproj" />
+	  <ProjectReference Include="..\BrewUp.Warehouse.Infrastructure\BrewUp.Warehouse.Infrastructure.csproj" />
 	</ItemGroup>
 
 </Project>
