--- a/src/Warehouses/BrewUp.Wharehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Wharehouses.Rest/appsettings.json
@@ -7,14 +7,9 @@
     },
     "AllowedHosts": "*",
     "BrewUp": {
-        "TokenAuthentication": {
-            "SecretKey": "my$&cr&tK&y",
-            "Issuer": "https://localhost:7079/token",
-            "Audience": "myAudience",
-            "TokenPath": "token",
-            "TokenExpiration": 5,
-            "RefreshTokenExpiration": 4320,
-            "CookieName": "accessToken"
+        "MongoDbSettings": {
+            "ConnectionString": "mongodb://localhost",
+            "DatabaseName": "Warehouse_ReadModel"
         }
     }
 }
