--- a/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
@@ -7,16 +7,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\BrewUp.Warehouse.ReadModel\BrewUp.Warehouse.ReadModel.csproj" />
+      <ProjectReference Include="..\BrewUp.Warehouse.Shared\BrewUp.Warehouse.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs\" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+      <PackageReference Include="Muflone.Eventstore" Version="6.1.1" />
     </ItemGroup>
 
 </Project>
