--- a/src/Purchases/Brewup.Purchases.Rest/appsettings.json
+++ b/src/Purchases/Brewup.Purchases.Rest/appsettings.json
@@ -8,10 +8,10 @@
   "AllowedHosts": "*",
 
   "EventStore": {
-    "ConnectionString": "ConnectTo=tcp://localhost:1113;UseSslConnection=false"
+    "ConnectionString": "ConnectTo=tcp://localhost:6113;UseSslConnection=false"
   },
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "Purchases_ReadModel"
   },
   "RabbitMQ": {
