--- a/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -8,13 +8,17 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BrewUp.Warehouse.ReadModel\BrewUp.Warehouse.ReadModel.csproj" />
-      <ProjectReference Include="..\BrewUp.Warehouse.Shared\BrewUp.Warehouse.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
       <PackageReference Include="Muflone.Eventstore" Version="6.1.1" />
+      <PackageReference Include="Muflone.Transport.RabbitMQ" Version="6.1.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="RabbitMq\" />
     </ItemGroup>
 
 </Project>
