--- a/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
@@ -7,7 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Abstract\" />
+      <Compile Remove="Abstract\**" />
+      <EmbeddedResource Remove="Abstract\**" />
+      <None Remove="Abstract\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="EventHandlers\" />
     </ItemGroup>
 
 </Project>
