Prepares first IntegrationEvent

--- a/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
@@ -18,7 +18,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="RabbitMq\" />
+      <Folder Include="RabbitMq\Commands\" />
+      <Folder Include="RabbitMq\Events\" />
     </ItemGroup>
 
 </Project>
