--- a/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
@@ -6,10 +6,23 @@
         }
     },
     "AllowedHosts": "*",
-    "BrewUp": {
-        "MongoDbSettings": {
-            "ConnectionString": "mongodb://localhost",
-            "DatabaseName": "Warehouse_ReadModel"
-        }
+  "BrewUp": {
+    "MongoDb": {
+      "ConnectionString": "mongodb://localhost",
+      "DatabaseName": "Warehouse_ReadModel"
+    },
+    "EventStore": {
+      "ConnectionString": "ConnectTo=tcp://localhost:5113;UseSslConnection=false"
+    },
+    "RabbitMQ": {
+      "Host": "localhost",
+      "ExchangeCommandName": "brewup.command.exchange",
+      "QueueCommandName": "CreateBuyOrder",
+      "ExchangeEventName": "brewup.event.exchange",
+      "QueueEventName": "brewup.topic.warehouses",
+      "Username": "guest",
+      "Password": "guest",
+      "ClientId": "BrewupWarehouses"
     }
+  }
 }
