--- a/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -14,10 +14,11 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Muflone" Version="6.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="EventHandlers\" />
+      <ProjectReference Include="..\BrewUp.Warehouse.Messages\BrewUp.Warehouse.Messages.csproj" />
     </ItemGroup>
 
 </Project>
