--- a/src/Warehouses/BrewUp.Warehouses.Domain/BrewUp.Warehouses.Domain.csproj
+++ b/src/Warehouses/BrewUp.Warehouses.Domain/BrewUp.Warehouses.Domain.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Events\" />
+    <PackageReference Include="Muflone" Version="6.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Muflone" Version="6.2.0" />
+    <Folder Include="CommandHandlers\" />
   </ItemGroup>
 
 </Project>
