Creates first command forWarehouses (with test) Updates docker-compose

--- a/src/Warehouses/BrewUp.Warehouse.ApplicationServices/BrewUp.Warehouse.ApplicationServices.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ApplicationServices/BrewUp.Warehouse.ApplicationServices.csproj
@@ -25,7 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="BindingModel\" />
+      <Folder Include="BindingModels\" />
+      <Folder Include="Sagas\" />
       <Folder Include="Validators\" />
     </ItemGroup>
 
