--- a/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BrewUp.Warehouse.Messages\BrewUp.Warehouse.Messages.csproj" />
+      <ProjectReference Include="..\BrewUp.Warehouse.SharedKernel\BrewUp.Warehouse.SharedKernel.csproj" />
     </ItemGroup>
 
 </Project>
