--- a/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
@@ -8,16 +8,16 @@
     "AllowedHosts": "*",
   "BrewUp": {
     "MongoDb": {
-      "ConnectionString": "mongodb://localhost",
+      "ConnectionString": "mongodb://localhost:47017",
       "DatabaseName": "Warehouse_ReadModel"
     },
     "EventStore": {
-      "ConnectionString": "ConnectTo=tcp://localhost:5113;UseSslConnection=false"
+      "ConnectionString": "ConnectTo=tcp://localhost:4113;UseSslConnection=false"
     },
     "RabbitMQ": {
       "Host": "localhost",
       "ExchangeCommandName": "brewup.command.exchange",
-      "QueueCommandName": "CreateBuyOrder",
+      "QueueCommandName": "PrepareOrder",
       "ExchangeEventName": "brewup.event.exchange",
       "QueueEventName": "brewup.topic.warehouses",
       "Username": "guest",
