--- a/src/Warehouses/BrewUp.Warehouse.Messages/BrewUp.Warehouse.Messages.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.Messages/BrewUp.Warehouse.Messages.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <Folder Include="Commands\" />
-    <Folder Include="Events\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Muflone" Version="6.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BrewUp.Warehouse.SharedKernel\BrewUp.Warehouse.SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
