--- a/src/Warehouses/BrewUp.Warehouse.SharedKernel/BrewUp.Warehouse.SharedKernel.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.SharedKernel/BrewUp.Warehouse.SharedKernel.csproj
@@ -10,4 +10,8 @@
     <Folder Include="DomainIds\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Muflone" Version="6.2.0" />
+  </ItemGroup>
+
 </Project>
