--- a/src/Warehouses/BrewUp.Warehouses.Domain/BrewUp.Warehouses.Domain.csproj
+++ b/src/Warehouses/BrewUp.Warehouses.Domain/BrewUp.Warehouses.Domain.csproj
@@ -12,6 +12,11 @@
 
   <ItemGroup>
     <Folder Include="CommandHandlers\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BrewUp.Warehouse.Messages\BrewUp.Warehouse.Messages.csproj" />
   </ItemGroup>
 
 </Project>
