--- a/src/Warehouses/BrewUp.Warehouse.ApplicationServices/BrewUp.Warehouse.ApplicationServices.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ApplicationServices/BrewUp.Warehouse.ApplicationServices.csproj
@@ -18,6 +18,8 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Muflone" Version="6.2.0" />
+      <PackageReference Include="Muflone.Saga" Version="6.2.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,7 +28,6 @@
 
     <ItemGroup>
       <Folder Include="BindingModels\" />
-      <Folder Include="Sagas\" />
       <Folder Include="Validators\" />
     </ItemGroup>
 
