--- a/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
@@ -8,12 +8,14 @@
 
     <ItemGroup>
       <ProjectReference Include="..\BrewUp.Warehouse.ReadModel\BrewUp.Warehouse.ReadModel.csproj" />
+      <ProjectReference Include="..\BrewUp.Warehouses.Domain\BrewUp.Warehouses.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
       <PackageReference Include="Muflone.Eventstore" Version="6.1.1" />
+      <PackageReference Include="Muflone.Saga.Persistence.MongoDb" Version="6.0.0" />
       <PackageReference Include="Muflone.Transport.RabbitMQ" Version="6.1.3" />
     </ItemGroup>
 
