--- a/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.ReadModel/BrewUp.Warehouse.ReadModel.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
       <PackageReference Include="Muflone" Version="6.2.0" />
+      <PackageReference Include="Muflone.Saga" Version="6.2.0" />
     </ItemGroup>
 
     <ItemGroup>
