Update RabbitHelper Create command and event for CreateBeer

--- a/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
@@ -17,7 +17,7 @@
     "RabbitMQ": {
       "Host": "localhost",
       "ExchangeCommandName": "brewup.command.exchange",
-      "QueueCommandName": "PrepareOrder",
+      "QueueCommandName": "CreateBeer",
       "ExchangeEventName": "brewup.event.exchange",
       "QueueEventName": "brewup.topic.warehouses",
       "Username": "guest",
