Update RabbitHelper Create command and event for CreateBeer

--- a/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
@@ -19,7 +19,7 @@
       "ExchangeCommandName": "brewup.command.exchange",
       "QueueCommandName": "CreateBeer",
       "ExchangeEventName": "brewup.event.exchange",
-      "QueueEventName": "brewup.topic.warehouses",
+      "QueueEventName": "BeerCreated",
       "Username": "guest",
       "Password": "guest",
       "ClientId": "BrewupWarehouses"
