--- a/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouse.Infrastructure/BrewUp.Warehouse.Infrastructure.csproj
@@ -7,7 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\..\CQRS-Muflone\Muflone.Eventstore\src\Muflone.Eventstore\Muflone.Eventstore.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouse.ReadModel\BrewUp.Warehouse.ReadModel.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.Domain\BrewUp.Warehouses.Domain.csproj" />
     </ItemGroup>
@@ -15,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+      <PackageReference Include="Muflone.Eventstore" Version="6.1.1" />
       <PackageReference Include="Muflone.Saga.Persistence.MongoDb" Version="6.0.0" />
       <PackageReference Include="Muflone.Transport.RabbitMQ" Version="6.1.4" />
     </ItemGroup>
