--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -30,15 +30,53 @@ services:
            source: purchases-eventstore-logs
            target: /var/log/purchases-eventstore
 
+  warehouses-eventstore:
+     
+     container_name: "warehouses-eventstore"
+     
+     image: eventstore/eventstore:latest
+
+     environment:
+         - EVENTSTORE_CLUSTER_SIZE=1
+         - EVENTSTORE_RUN_PROJECTIONS=All
+         - EVENTSTORE_START_STANDARD_PROJECTIONS=true
+         - EVENTSTORE_EXT_TCP_PORT=1113
+         - EVENTSTORE_HTTP_PORT=2113
+         - EVENTSTORE_INSECURE=true
+         - EVENTSTORE_ENABLE_EXTERNAL_TCP=true
+         - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
+      
+     ports:
+         - 4113:1113
+         - 5113:2113
+
+     volumes:
+         - type: volume
+           source: warehouses-eventstore-data
+           target: /var/lib/warehouses-eventstore
+         - type: volume
+           source: warehouses-eventstore-logs
+           target: /var/log/warehouses-eventstore
+
   purchases-mongodb:
       image: mongo
       ports:
-          - 27017:27017
+          - 37017:27017
 
       volumes:
          - type: volume
            source: purchases-mongodb-data
            target: /var/lib/purchases-mongodb
+
+  warehouses-mongodb:
+      image: mongo
+      ports:
+          - 47017:27017
+
+      volumes:
+         - type: volume
+           source: warehouses-mongodb-data
+           target: /var/lib/warehouses-mongodb
   
   rabbitmq:
       image: rabbitmq:3.8-management-alpine
@@ -62,4 +100,7 @@ services:
 volumes:
   purchases-eventstore-data:
   purchases-eventstore-logs:
+  warehouses-eventstore-data:
+  warehouses-eventstore-logs:
   purchases-mongodb-data:
+  warehouses-mongodb-data:
