Added new command to change order status and did some cleanup

--- a/src/Purchases/Brewup.Purchases.Rest/appsettings.json
+++ b/src/Purchases/Brewup.Purchases.Rest/appsettings.json
@@ -11,7 +11,7 @@
     "ConnectionString": "ConnectTo=tcp://localhost:6113;UseSslConnection=false"
   },
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://localhost:37017",
     "DatabaseName": "Purchases_ReadModel"
   },
   "RabbitMQ": {
@@ -23,5 +23,24 @@
     "Username": "guest",
     "Password": "guest",
     "ClientId": "BrewupPurchases"
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/logs_.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
