Switched back to nuget pkg of rabbitmq

--- a/src/Purchases/Brewup.Purchases.Infrastructure/Brewup.Purchases.Infrastructure.csproj
+++ b/src/Purchases/Brewup.Purchases.Infrastructure/Brewup.Purchases.Infrastructure.csproj
@@ -9,10 +9,10 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
     <PackageReference Include="Muflone.Eventstore" Version="6.1.1" />
+    <PackageReference Include="Muflone.Transport.RabbitMQ" Version="6.1.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Muflone\Muflone.Transport.RabbitMQ\src\Muflone.Transport.RabbitMQ\Muflone.Transport.RabbitMQ.csproj" />
     <ProjectReference Include="..\Brewup.Purchases.Domain\Brewup.Purchases.Domain.csproj" />
     <ProjectReference Include="..\Brewup.Purchases.ReadModel\Brewup.Purchases.ReadModel.csproj" />
   </ItemGroup>
