Add price to saga's events and minor fixes

--- a/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
@@ -1,11 +1,11 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
   "BrewUp": {
     "MongoDb": {
       "ConnectionString": "mongodb://localhost:47017",
@@ -24,5 +24,24 @@
       "Password": "guest",
       "ClientId": "BrewupWarehouses"
     }
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/logs_.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
