--- a/src/Warehouses/BrewUp.Warehouses.Infrastructure/BrewUp.Warehouses.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouses.Infrastructure/BrewUp.Warehouses.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\..\Muflone\Muflone.Transport.RabbitMQ.Saga\src\Muflone.Transport.RabbitMQ.Saga\Muflone.Transport.RabbitMQ.Saga.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.ReadModel\BrewUp.Warehouses.ReadModel.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.Domain\BrewUp.Warehouses.Domain.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.Sagas\BrewUp.Warehouses.Sagas.csproj" />
