--- a/src/Warehouses/BrewUp.Warehouses.Sagas/BrewUp.Warehouses.Sagas.csproj
+++ b/src/Warehouses/BrewUp.Warehouses.Sagas/BrewUp.Warehouses.Sagas.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BrewUp.Warehouses.Messages\BrewUp.Warehouses.Messages.csproj" />
+    <ProjectReference Include="..\BrewUp.Warehouses.ReadModel\BrewUp.Warehouses.ReadModel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
