--- a/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
+++ b/src/Warehouses/BrewUp.Warehouses.Rest/appsettings.json
@@ -12,17 +12,14 @@
       "DatabaseName": "Warehouse_ReadModel"
     },
     "EventStore": {
-      "ConnectionString": "ConnectTo=tcp://localhost:4113;UseSslConnection=false"
+      "ConnectionString": "ConnectTo=tcp://localhost:5113;UseSslConnection=false"
     },
     "RabbitMQ": {
       "Host": "localhost",
       "ExchangeCommandName": "brewup.command.exchange",
-      "QueueCommandName": "CreateBeer",
       "ExchangeEventName": "brewup.event.exchange",
-      "QueueEventName": "BeerCreated",
       "Username": "guest",
-      "Password": "guest",
-      "ClientId": "BrewupWarehouses"
+      "Password": "guest"
     }
   },
   "Serilog": {
