--- a/src/Warehouses/BrewUp.Warehouses.Infrastructure/BrewUp.Warehouses.Infrastructure.csproj
+++ b/src/Warehouses/BrewUp.Warehouses.Infrastructure/BrewUp.Warehouses.Infrastructure.csproj
@@ -7,7 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\Muflone\Muflone.Transport.RabbitMQ.Saga\src\Muflone.Transport.RabbitMQ.Saga\Muflone.Transport.RabbitMQ.Saga.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.ReadModel\BrewUp.Warehouses.ReadModel.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.Domain\BrewUp.Warehouses.Domain.csproj" />
       <ProjectReference Include="..\BrewUp.Warehouses.Sagas\BrewUp.Warehouses.Sagas.csproj" />
@@ -18,6 +17,7 @@
       <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
       <PackageReference Include="Muflone.Eventstore" Version="6.1.1" />
       <PackageReference Include="Muflone.Saga.Persistence.MongoDb" Version="6.0.0" />
+      <PackageReference Include="Muflone.Transport.RabbitMQ.Saga" Version="6.2.0" />
     </ItemGroup>
 
     <ItemGroup>
